@@ -158,6 +158,7 @@ namespace DFHack
         bool loadScriptFile(color_ostream &out, std::string fname, bool silent = false);
 
         bool addScriptPath(std::string path, bool search_before = false);
+        bool setModScriptPaths(const std::vector<std::string> &mod_script_paths);
         bool removeScriptPath(std::string path);
         std::string findScript(std::string name);
         void getScriptPaths(std::vector<std::string> *dest);
@@ -239,7 +240,7 @@ namespace DFHack
         std::vector<std::unique_ptr<Module>> allModules;
         DFHack::PluginManager * plug_mgr;
 
-        std::vector<std::string> script_paths[2];
+        std::vector<std::string> script_paths[3];
         std::mutex script_path_mutex;
 
         // hotkey-related stuff
